# setup

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: __init__.py  __main__.py
tests/: __init__.py  test_template.sh
